comp card is currently fixed on scoll but form overlaps it

--- a/src/app/comp1/_comp-card.sass
+++ b/src/app/comp1/_comp-card.sass
@@ -4,6 +4,7 @@
     box-sizing: border-box
     display: block
     margin: 0
+    z-index: 3
 
     .comp-content
         display: grid
