--- a/src/app/comp1/comp1.component.sass
+++ b/src/app/comp1/comp1.component.sass
@@ -5,7 +5,13 @@
     display: flex
     align-items: baseline
     margin: 5%
-    flex-wrap: wrap
 
 .comp
     margin: 1%
+
+.sticky
+    position: fixed
+    top: 0
+
+.sticky + .content
+    margin-left: 800px
